2002-01-29 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified star_system,planet,unit
	  to read in the 'name' of a planet or unit
	* improved missions
	* removed bug in easydom::parseCalike

	
2002-01-29 Daniel Aleksandrow <dandandaman@users.sourceforge.net>

	* Fixed the revoker's texture
	* Added cunerpicus texture (for moon)
	* Added asteroid textures and meshes (all the ones I could find)

2002-01-28 Daniel Horn <hellcatv@hotmail.com>

	* Added VDU type to cockpit file... you can select what sort of type of VDU it is by adding the type flag like so <VDU type="Message Navigation"/>
	* Added Disable-sound option to configure
	* Added Scroll buttons to scroll up and down on the vDU's
	* Changed Scroll buttons to only react on press :-/
	
2002-01-28 Daniel Horn <hellcatv@hotmail.com>
	* Added jump sounds on exit and entrance (jumparrive jumpleave in config)
	* Fixed it so jump star did not draw unless the event (leaving or arriving) happened in teh system with the current Cockpit's parent
	* Fixed ancient ~Beam bug that would cause segfault at null pointer if all beams with a certain texture were deleted.
	* Fixed bug that caused clipping to incorrectly clip after 'host' camera starship destroyed

>>>>>>> 1.107
2002-01-28 Daniel Aleksandrow <dandandaman@users.sourceforge.net>

	* New ship (the Revoker).....unit file not finished

2002-01-27 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* wrote rather complex mission
	

2002-01-27 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* wrote Order AIPatrol that can patrol around an area/unit
	  uses modules/ai_patrol.c

	
2002-01-26 Daniel Horn <hellcatv@hotmail.com>
	* fixed bug that about 1 in 1000 units leaves a ghost behind on the collide board.
	* scans entire collide table when a unit is leaving systems or dying
	* testing with missions/totalwar2.mission
	

2002-01-26 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* updated systems a bit