@@ -1,3 +1,9 @@
+2002-01-29 Daniel Horn <hellcatv@hotmail.com>
+	* Realized that ucref (the reference for units) was off by many many orders of magnitude...fixed
+	* Realized that units weren't being deleted even if they were on the delete queue
+	* Experimental! Enabled deletion. To disable #define DISABLE_DELETE in cmd/unit_damage.cpp  Let me know if you run into ANY problems freeing a unit! So far I have had one...but I haven't bene able to reproduce ... or get any stack of usefulness... maybe someone can point me in the right direction here...it would be a shame not to delete units
+	* Added docking vector so that units may dock to each other (soon)
+
 2002-01-29 Alexander Rawass <alexannika@users.sourceforge.net>
 	
 	* modified star_system,planet,unit
